Fix copyright visibility

--- a/app/utils/formstyle.css
+++ b/app/utils/formstyle.css
@@ -57,6 +57,7 @@ textarea {
 .contact-container {
   background-color: rgba(26, 26, 26, 0.137);
   padding: 20px;
+
   border-radius: 8px;
   margin: 0 auto;
   max-width: 600px;
@@ -64,7 +65,7 @@ textarea {
 
 @media screen and (max-width: 600px) {
   .contact-container {
-    margin: 0 10px; /* Add left and right margins for small screens */
+    margin: 0 0px; /* Add left and right margins for small screens */
   }
 }
 
